More Java 21 like.